Different fixes in the asyncapi v3 spec examples (#543)
* fix: Minor fix to core spec example

The asyncapi test sample had a minor issue when validated with https://studio.asyncapi.com/

* fix: Minor fix to sns-plugin spec example

The asyncapi test sample had a minor issue when validated with https://studio.asyncapi.com/

We need to properly configure those values, something that I will take care of in the next PR

* fix: Minor fix to sqs-plugin spec example

The asyncapi test sample had a minor issue when validated with https://studio.asyncapi.com/

We need to properly configure those values, something that I will take care of in the next PR

* Fixed styles

* fix: Fixed broken tests

* fix: Added support to sqs-plugin to generate the minimum needed values

To pass the SQS Binding AsyncAPI validation, we need to provide some required fields. This commit adds the minimum values needed.

* fix: Added support to sns-plugin to generate the minimum needed values

To pass the SNS Binding AsyncAPI validation, we need to provide some required fields. This commit adds the minimum values needed.

* fix: Removed small batch of pending FIXMEs

* fix: Removed small batch of pending FIXMEs

* fix: Removed small batch of pending FIXMEs

* fix: Fixed the cloudstream-plugin

The cloudstream-plugin was not generating the operations section of the AsyncAPI spec. Now is fixed and validated.

Multiple FIXMEs were fixed and removed too

* fix: Removed unused methods

* fix: Fixed CloudStream operation action typo

* fix: Removed unneeded channelId field from ChannelObject

* fix: Fixed some code analysis complains

* fix: Fixed Operation messages bug

Whe configuring annotations on the class level, the generated Operations didn't have the proper message references.

This fixes the latest blocking FIXME

* fix: Schema Properties

The Schema Properties should support any kind of value, like booleans.

Making the property accept `